[gd_scene load_steps=5 format=3 uid="uid://chw0euwlvm8g8"]

[ext_resource type="Script" path="res://Scripts/Menues/Character_Selection/character_selected_card.gd" id="1_ulrde"]
[ext_resource type="PackedScene" uid="uid://biq85g3kcoxjb" path="res://Scenes/Player/PCs/Dani_Dancer/dani_dancer.tscn" id="2_2281p"]
[ext_resource type="Texture2D" uid="uid://cnaj47nhyvldr" path="res://Graphics/Characters/ASTA_ASTROLOGIAN/Ability_Icons/ICON_Card_Draw_1x.png" id="3_5krfp"]
[ext_resource type="Texture2D" uid="uid://dagie0n3c23fj" path="res://Graphics/UI/Input_Icons/Input_Left_Arrow_1x.png" id="4_pi3gy"]

[node name="CharacterSelectedCard" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 250
script = ExtResource("1_ulrde")

[node name="CB_DEBUG_SPRITE" parent="." instance=ExtResource("2_2281p")]
position = Vector2(640, 400)

[node name="CR_BG" type="ColorRect" parent="."]
layout_mode = 2
mouse_filter = 1
color = Color(0.59, 0.59, 0.59, 0.156863)

[node name="MC_Moveset_Tabs" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 10

[node name="TC_Abilities" type="TabContainer" parent="MC_Moveset_Tabs"]
unique_name_in_owner = true
layout_mode = 2
tab_alignment = 1
current_tab = 0
tabs_position = 1

[node name="Moveset 1" type="TabBar" parent="MC_Moveset_Tabs/TC_Abilities"]
layout_mode = 2
tab_alignment = 2
metadata/_tab_index = 0

[node name="MC" type="MarginContainer" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VB" type="VBoxContainer" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 1/MC"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HB1" type="HBoxContainer" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 1/MC/VB"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TR_ab1_icon" type="TextureRect" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 1/MC/VB/HB1"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_5krfp")

[node name="RichTextLabel" type="RichTextLabel" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 1/MC/VB/HB1"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "
Description of MS1-AB1"

[node name="HB2" type="HBoxContainer" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 1/MC/VB"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TR_ab1_icon" type="TextureRect" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 1/MC/VB/HB2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_5krfp")

[node name="RichTextLabel" type="RichTextLabel" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 1/MC/VB/HB2"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "
Description of MS1-AB2"

[node name="HB3" type="HBoxContainer" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 1/MC/VB"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TR_ab1_icon" type="TextureRect" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 1/MC/VB/HB3"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_5krfp")

[node name="RichTextLabel" type="RichTextLabel" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 1/MC/VB/HB3"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "
Description of MS1-AB3"

[node name="HB4" type="HBoxContainer" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 1/MC/VB"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TR_ab1_icon" type="TextureRect" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 1/MC/VB/HB4"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_5krfp")

[node name="RichTextLabel" type="RichTextLabel" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 1/MC/VB/HB4"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "
Description of MS1-AB4"

[node name="Moveset 2" type="TabBar" parent="MC_Moveset_Tabs/TC_Abilities"]
visible = false
layout_mode = 2
tab_alignment = 2
metadata/_tab_index = 1

[node name="MC" type="MarginContainer" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VB" type="VBoxContainer" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 2/MC"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HB1" type="HBoxContainer" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 2/MC/VB"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Moveset 3" type="TabBar" parent="MC_Moveset_Tabs/TC_Abilities"]
visible = false
layout_mode = 2
tab_alignment = 2
metadata/_tab_index = 2

[node name="MC" type="MarginContainer" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VB" type="VBoxContainer" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 3/MC"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HB1" type="HBoxContainer" parent="MC_Moveset_Tabs/TC_Abilities/Moveset 3/MC/VB"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MC_Left_Input" type="MarginContainer" parent="MC_Moveset_Tabs"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 1

[node name="TR_Left_Input" type="TextureRect" parent="MC_Moveset_Tabs/MC_Left_Input"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("4_pi3gy")

[node name="MC_Right_Input" type="MarginContainer" parent="MC_Moveset_Tabs"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 332
theme_override_constants/margin_top = 1

[node name="TR_Right_Input" type="TextureRect" parent="MC_Moveset_Tabs/MC_Right_Input"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("4_pi3gy")
flip_h = true
